tests/class_method_default_parameters/class_method_default_parameters.exp
Error --------------------------------- class_method_default_parameters.js:17:19

string is incompatible with number.

Error: class_method_default_parameters.js:17
 17:     h(i: number = this.b) { // error
                       ^^^^^^ string [1] is incompatible with number [2].
  References:
    3:     b: string;
              ^^^^^^ [1]: string
   17:     h(i: number = this.b) { // error
                ^^^^^^ [2]: number


Found 1 error
